1998-09-25  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.m (tkobjc_animate_message): Handle stepFactors
	that result in 0 xstep or ystep.  Use sleepTime to handle
	slow-stepping `trigger' animation.
	(tkobjc_pixmap_create_from_widget): Use deiconify message instead
	of doing it by globalTkInterp.

	* ScheduleItem.[hm] ([ScheduleItem -getSleepTime]): New method.

	* Schedule.m ([ScheduleItem -drop]): Do drops of line,
	minTextItem, maxTextItem, and sleepTime manually.
	([ScheduleItem -trigger:X:Y:]): Handle zoomFactor.

	* ScheduleItem.h (ScheduleItem): Add line, minTextItem, maxTextItem,
	and sleepTime. 

	* Frame.h: Remove assertPosition (functionality now
	in Canvas as addWidget:X:Y:centerFlag:).

	* Canvas.[hm] ([Canvas -addWidget:X:Y:centerFlag:], 
	[Canvas -removeWidget:]): New methods.

	* ArchivedGeometryWidget.[hm]: Move destroy notifcation
	support to Widget.[hm] (drop, getDestroyedFlag, _notify_Target_, 
	structure_proc, enableDestroyNotification:notificationMethod:,
	disableDestroyNotifcation.

1998-09-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* CompleteProbeDisplayLabel.m: Include misc.h
	([CompleteProbeDisplayLabel -createEnd]): Use targetWidget instead
	of probeDisplay.

	* CompleteProbeDisplayLabel.[hm] (CompleteProbeDisplayLabel): Remove
	probeDisplayManager and setter.  Use an extern to the singleton global
	object.

	* internal.m (tkobjc_animate_message): Add a flag to select
	between trigger and schedule images.

	* ScheduleItem.[hm] ([ScheduleItem -trigger:X:Y:]): New method.

1998-09-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.[hm]: New function tkobjc_animate_message (only X support).

	* ScheduleItem.m (PendingEvent): Add.  Add getXForBar, getYForTime,
	and at:owner:widget:x:y:.

	* CanvasAbstractItem.[hm]: New method getCanvas.

1998-09-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ScheduleItem.[hm]: New files.

	* TextItem.h (TextItem): Add centeredFlag ivar.
